--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<footer>
     		<ul>
         		<li><a href="mailto:sunilsingh@gmail.com">email</a></li>
-        		<li><a href="https://github.com/sunil-17112">github.com/sunil-17112</a></li>
+        		<li><a href="https://github.com/justasunil">github.com/justasunil</a></li>
 			</ul>
 		</footer>
 	</body>
