--- a/index.html
+++ b/index.html
@@ -4,27 +4,9 @@
 		<title>Sunil Kumar</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="main.css">
+		<a href="#down">Click Here to Smoothly Scroll Down</a>
+		<div id="down">
+		    <h1>You are down!</h1>
+		</div>
 	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Sunil Kumar</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Hank Quinlan!</h1>
-				<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:sunilsingh@gmail.com">email</a></li>
-        		<li><a href="https://github.com/justasunil">github.com/justasunil</a></li>
-			</ul>
-		</footer>
-	</body>
 </html>
