--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 		<title>Sunil Kumar</title>
 		<!-- link to main stylesheet -->
 		<link rel="stylesheet" type="text/css" href="main.css">
-		<a href="#down">Click Here to Smoothly Scroll Down</a>
+		<a href="#down">About</a>
 		<div id="down">
-		    <h1>You are down!</h1>
+		    <h1>Sunil Kumar is a Research Assistant in HiPeC Lab at IIITD. He pursued his Bachelor degree in Computer Science from Indraprastha Institute of Information Technology, Delhi (IIITD)</h1>
 		</div>
 	</head>
 </html>
