--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	<br>
 	<br>
 	  <!--a name="photo"><img HEIGHT="300" WIDTH="430" src="DSCN9553.jpg" alt="DSCN9553"/></a-->
-	  <img src="./DSCN9553.jpg" alt="Vivek Kumar" height="290" width="500" /> </a>
+	  <img src="./profile.jpg" alt="Sunil Kumar" height="290" width="500" /> </a>
 	</div>
 	
         <div class="contentText">
