--- a/index.html
+++ b/index.html
@@ -1,45 +1,30 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-		<title>  Sunil Kumar</title>
-
+<link rel="stylesheet" type="text/css" href="mystyle.css">
 </head>
-
 <body>
-    <!--<style>
-	div.floating-menu {position:fixed;background: #26476E url(background.png);border:1px ;width:220px;z-index:100;}
-	div.floating-menu a, div.floating-menu h3 {display:block;margin:0 1.2em;}
-	</style>
-    -->
-	<div class="floating-menu">
-	<br>
-	<br>
-        <h1><span style="color: #008000"><a href="#photo"> Sunil Kumar</a></span></h1>
-	<br>
-	<h3>
-        <a href="#about">About</a>
-	<br>
-        <a href="#contact">Contact</a>
-	</h3>
-	</div>
 
-	<div id="page">
-	<br>
-	<br>
-	<br>
-	  <!--a name="photo"><img HEIGHT="300" WIDTH="430" src="DSCN9553.jpg" alt="DSCN9553"/></a-->
-	  <img src="./profile_photo.jpg" alt="Sunil Kumar" height="500" width="290" /> </a>
-	</div>
-	
-        <div class="contentText">
-        <h1><span style="color: #9f8060; padding-top:8px; font-size:21px; font-weight:bold; letter-spacing:-1px; "><a name="about"> About</a></span></h1>
-
-	<p>
-
-	Sunil Kumar is a Research Assistant in HiPeC Lab at Indraprastha Institute of Information Technology, Delhi (<a href="https://iiitd.ac.in/" target="_blank">IIITD</a>). He pursued his Bachelor degree in Computer Science from <a href="https://iiitd.ac.in/" target="_blank">IIITD</a> in June 2021. 
-</p><p>
-He has done his B.Tech thesis during final year his graduation under supervision of Dr. Vivek Kumar from IIITD. His research interest focused on High Performance Computing and Parallel Computing.
+<h style="text-align:center">Sunil Kumar</h>
+<img src="IMG_20170823_103114.jpg" style="width:300px;float:right;margin-right:20px;border-style:solid;border-width:thick;border-color:yellow;">
+<h1 style="color:blue;margin-left:0px;">About</h1> 
+<p>
+Sunil Kumar is a Research Assistant in HiPeC Lab at Indraprastha Institute of Information Technology, Delhi (<a href="https://iiitd.ac.in/" target="_blank">IIITD</a>). He pursued his Bachelor degree in Computer Science from <a href="https://iiitd.ac.in/" target="_blank">IIITD</a> in June 2021. He has done his B.Tech thesis during final year his graduation under supervision of Dr. Vivek Kumar from IIITD. His research interest focused on High Performance Computing and Parallel Computing.
 </p>
-
+<h1 style="color:blue;margin-left:0px;">Hobbies</h1>
+<ol class="b">
+  <li> Swimming</li>
+  <li> Cycling</li> 
+  <li> badminton</li>
+</ol>
+<h1 style="color:blue;margin-left:0px;">Language Skill</h1>
+<ul class="a">
+  <li>English</li>
+  <li>Hindi</li>
+</ul>
+<h1 style="color:blue;margin-left:0px;">Contact</h1>
+<a href="https://www.facebook.com/profile.php?id=100014052012926"><img src="http://pngimg.com/uploads/facebook_logos/facebook_logos_PNG19754.png" alt="facebook" style="width:80px;height:80px;"></a>
+<a href="https://twitter.com/sunil15338843"><img src="https://images.vexels.com/media/users/3/132556/isolated/preview/b2314c5cc836a5a3f6448bc4f98f37d8-twitter-square-icon-by-vexels.png" alt="twitter" style="width:80px;height:80px;"></a>
 </body>
 </html>
