--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <h style="text-align:center">Sunil Kumar</h>
-<img src="IMG_20170823_103114.jpg" style="width:300px;float:right;margin-right:20px;border-style:solid;border-width:thick;border-color:yellow;">
+<img src="profile_photo.jpg" style="width:300px;float:right;margin-right:20px;border-style:solid;border-width:thick;border-color:yellow;">
 <h1 style="color:blue;margin-left:0px;">About</h1> 
 <p>
 Sunil Kumar is a Research Assistant in HiPeC Lab at Indraprastha Institute of Information Technology, Delhi (<a href="https://iiitd.ac.in/" target="_blank">IIITD</a>). He pursued his Bachelor degree in Computer Science from <a href="https://iiitd.ac.in/" target="_blank">IIITD</a> in June 2021. He has done his B.Tech thesis during final year his graduation under supervision of Dr. Vivek Kumar from IIITD. His research interest focused on High Performance Computing and Parallel Computing.
