--- a/index.html
+++ b/index.html
@@ -1,30 +1,25 @@
-
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="main.css">
+<title style="text-align:center">Sunil Kumar</title>
 </head>
+
 <body>
 
-<h style="text-align:center">Sunil Kumar</h>
-<img src="bio.jpg" style="width:300px;float:right;margin-right:20px;">
-<h1 style="color:blue;margin-left:0px;">About</h1> 
-<p>
-Sunil Kumar is a Research Assistant in HiPeC Lab at Indraprastha Institute of Information Technology, Delhi (<a href="https://iiitd.ac.in/" target="_blank">IIITD</a>). He pursued his Bachelor degree in Computer Science from <a href="https://iiitd.ac.in/" target="_blank">IIITD</a> in June 2021. He has done his B.Tech thesis during final year his graduation under supervision of Dr. Vivek Kumar from IIITD. His research interest focused on High Performance Computing and Parallel Computing.
+<h1>About me</h1>
+<p>Sunil Kumar is a Research Assistant in HiPeC Lab 
+   at Indraprastha Institute of Information Technology, Delhi 
+   (<a href="https://iiitd.ac.in/" target="_blank">IIITD</a>). 
+   He pursued his Bachelor degree in Computer Science from 
+   <a href="https://iiitd.ac.in/" target="_blank">IIITD</a> 
+   in June 2021. He has done his B.Tech thesis during final year 
+   his graduation under supervision of Dr. Vivek Kumar from IIITD. 
+   His research interest focused on High Performance Computing and 
+   Parallel Computing.
 </p>
-<h1 style="color:blue;margin-left:0px;">Hobbies</h1>
-<ol class="b">
-  <li> Swimming</li>
-  <li> Cycling</li> 
-  <li> badminton</li>
-</ol>
-<h1 style="color:blue;margin-left:0px;">Language Skill</h1>
-<ul class="a">
-  <li>English</li>
-  <li>Hindi</li>
-</ul>
-<h1 style="color:blue;margin-left:0px;">Contact</h1>
-<a href="https://www.facebook.com/profile.php?id=100014052012926"><img src="http://pngimg.com/uploads/facebook_logos/facebook_logos_PNG19754.png" alt="facebook" style="width:80px;height:80px;"></a>
-<a href="https://twitter.com/sunil15338843"><img src="https://images.vexels.com/media/users/3/132556/isolated/preview/b2314c5cc836a5a3f6448bc4f98f37d8-twitter-square-icon-by-vexels.png" alt="twitter" style="width:80px;height:80px;"></a>
+
 </body>
+
+
+
 </html>
