--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Sunil Kumar</title>
+		<title>About me</title>
 		<style>
 			img{
 				width: 400px;
@@ -15,7 +15,7 @@
 				font-size: 20;
 			}
 			.sub_text{
-				font-size: 10;
+				font-size: 20;
 			}
 			ul {
 				list-style-type: none;
@@ -41,20 +41,18 @@
 				background-color: #111111;
 			}
 		</style>
-	</head>
+		</head>
 
 	<body>
-
 		<h1>Sunil Kumar (PhD Scholar)</h1>
-
 		<ul>
 			<li><a href="#contact">Contact</a></li>
 			<li><a href="#news">News</a></li>
 			<li><a href="about.html">About</a></li>
-			<li><a href="#index.html">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 
 		</ul>
-			<img src="bio.jpg" alt="profile photo">
+		<img src="bio.jpg" alt="profile photo">
 		<br>
 		<br>
 		<br>
@@ -67,10 +65,11 @@
 		<br>
 		<br>
 		<br>
-        <h1 class="heading" style="text-align: center;">Sunil Kumar</h1>
-        <h2 class="sub_text" style="text-align: center;">Research Assistant @ HiPeC Lab</h2>
-        <h2 class="sub_text" style="text-align: center;">Indraprastha Institute of Information Technology</h2>
-		
-		
+		<h1 class="heading">About me</h1>
+		<p class="sub_text">
+			I am a Research Assistant in HiPeC Lab at Indraprastha Institute of Information Technology, Delhi (<a href="https://iiitd.ac.in/" target="_blank">IIIT-Delhi</a>). My current focus is to design and implement energy-efficient runtime for distributed systems using Hybrid programming models.
+		</p>
+
+
 	</body>
 </html>
