--- a/CV.html
+++ b/CV.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Sunil Kumar</title>
+		<title>Contact</title>
 		<style>
 			img{
 				width: 400px;
@@ -13,9 +13,10 @@
 			.heading{
 				font-weight: bold;
 				font-size: 20;
+				margin-right: 200px;
 			}
 			.sub_text{
-				font-size: 10;
+				margin-right: 20px;
 			}
 			ul {
 				list-style-type: none;
@@ -41,12 +42,10 @@
 				background-color: #111111;
 			}
 		</style>
-	</head>
+		</head>
 
 	<body>
-
 		<h1>Sunil Kumar (PhD Scholar)</h1>
-
 		<ul>
 			<li><a href="contact.html">Contact</a></li>
 			<li><a href="CV.html">CV</a></li>
@@ -54,23 +53,13 @@
 			<li><a href="index.html">Home</a></li>
 
 		</ul>
-			<img src="bio.jpg" alt="profile photo">
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-		<br>
-        <h1 class="heading" style="text-align: center;">Sunil Kumar</h1>
-        <h2 class="sub_text" style="text-align: center;">Research Assistant @ <a href="http://hipec.iiitd.edu.in/" target="_blank">HiPeC Lab</a></h2>
-        <h2 class="sub_text" style="text-align: center;">Indraprastha Institute of Information Technology, Delhi (<a href="https://iiitd.ac.in/" target="_blank">IIIT-Delhi</a>)</h2>
+		<img src="bio.jpg" alt="profile photo">
 		
+		<h1 class="heading">Resume</h1>
+		<div class="sub_text">
+			<embed src="Myresume.pdf" type="application/pdf" width="800px" height="600px" >
+		</div>
 		
+
 	</body>
 </html>
