--- a/about.html
+++ b/about.html
@@ -46,8 +46,8 @@
 	<body>
 		<h1>Sunil Kumar (PhD Scholar)</h1>
 		<ul>
-			<li><a href="#contact">Contact</a></li>
-			<li><a href="#news">News</a></li>
+			<li><a href="contact.html">Contact</a></li>
+			<li><a href="CV.html">CV</a></li>
 			<li><a href="about.html">About</a></li>
 			<li><a href="index.html">Home</a></li>
 
