--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Sunil Kumar</title>
+		<title>Contact</title>
 		<style>
 			img{
 				width: 400px;
@@ -15,7 +15,7 @@
 				font-size: 20;
 			}
 			.sub_text{
-				font-size: 10;
+				font-size: 50;
 			}
 			ul {
 				list-style-type: none;
@@ -41,12 +41,10 @@
 				background-color: #111111;
 			}
 		</style>
-	</head>
+		</head>
 
 	<body>
-
 		<h1>Sunil Kumar (PhD Scholar)</h1>
-
 		<ul>
 			<li><a href="contact.html">Contact</a></li>
 			<li><a href="CV.html">CV</a></li>
@@ -54,7 +52,7 @@
 			<li><a href="index.html">Home</a></li>
 
 		</ul>
-			<img src="bio.jpg" alt="profile photo">
+		<img src="bio.jpg" alt="profile photo">
 		<br>
 		<br>
 		<br>
@@ -67,10 +65,16 @@
 		<br>
 		<br>
 		<br>
-        <h1 class="heading" style="text-align: center;">Sunil Kumar</h1>
-        <h2 class="sub_text" style="text-align: center;">Research Assistant @ <a href="http://hipec.iiitd.edu.in/" target="_blank">HiPeC Lab</a></h2>
-        <h2 class="sub_text" style="text-align: center;">Indraprastha Institute of Information Technology, Delhi (<a href="https://iiitd.ac.in/" target="_blank">IIIT-Delhi</a>)</h2>
+		<h1 class="heading">Profile Links</h1>
+		<a href="mailto:sunil17112@iiitd.ac.in" target="_blank">sunil17112@iiitd.ac.in</a>
+		<br>
+		<a href="https://github.com/justasunil" target="_blank">Github Profile</a>
+		<br>
+		<a href="https://github.com/justasunil" target="_blank">Github Profile</a>
+		<br>
+		<a href="https://twitter.com/techsun7" target="_blank">Twitter Profile</a>
+		<br>
 		
-		
+
 	</body>
 </html>
