--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
 		<h1 class="heading">Profile Links</h1>
 		<a href="mailto:sunil17112@iiitd.ac.in" target="_blank">sunil17112@iiitd.ac.in</a>
 		<br>
-		<a href="https://github.com/justasunil" target="_blank">Github Profile</a>
+		<a href="https://www.linkedin.com/in/justasunil" target="_blank">Linkedin Profile</a>
 		<br>
 		<a href="https://github.com/justasunil" target="_blank">Github Profile</a>
 		<br>
