--- a/index.html
+++ b/index.html
@@ -2,45 +2,7 @@
 <html>
 	<head>
 		<title>Sunil Kumar</title>
-		<style>
-			img{
-				width: 400px;
-				float:left;
-				margin-left: 200px;
-				margin-right: 20px;
-				margin-top: 100px
-			}
-			.heading{
-				font-weight: bold;
-				font-size: 20;
-			}
-			.sub_text{
-				font-size: 10;
-			}
-			ul {
-				list-style-type: none;
-				margin: 0;
-				padding: 0;
-				overflow: hidden;
-				background-color: #333333;
-			}
-
-			li {
-				float: right;
-			}
-
-			li a {
-				display: block;
-				color: white;
-				text-align: center;
-				padding: 16px;
-				text-decoration: none;
-			}
-
-			li a:hover {
-				background-color: #111111;
-			}
-		</style>
+		<link rel="stylesheet" href="pages/styles.css">
 	</head>
 
 	<body>
@@ -48,13 +10,13 @@
 		<h1>Sunil Kumar (PhD Scholar)</h1>
 
 		<ul>
-			<li><a href="contact.html">Contact</a></li>
-			<li><a href="CV.html">CV</a></li>
-			<li><a href="about.html">About</a></li>
+			<li><a href="pages/contact.html">Contact</a></li>
+			<li><a href="pages/cv.html">CV</a></li>
+			<li><a href="pages/about.html">About</a></li>
 			<li><a href="index.html">Home</a></li>
 
 		</ul>
-			<img src="bio.jpg" alt="profile photo">
+			<img src="photos/bio.jpg" alt="profile photo">
 		<br>
 		<br>
 		<br>
