--- a/pages/about.html
+++ b/pages/about.html
@@ -25,13 +25,13 @@
 		<br>
 		<br>
 		<h1 class="heading">About me</h1>
-		<p class="sub_text">
+		<p class="sub_text" style="text-align: justify; white-space: normal;">
 			I am a Ph.D. scholar in the Department of Computer Science at Indraprastha Institute of Information Technology, Delhi (<a href="https://iiitd.ac.in/" target="_blank">IIIT-Delhi</a>), guided by <a href="https://vivkumar.github.io/" target="_blank">Dr. Vivek Kumar</a> (Assistant Professor at <a href="https://iiitd.ac.in/" target="_blank">IIIT-Delhi</a>) and co-guided by <a href="https://www.sriduttbhalachandra.com/" target="_blank">Dr. Sridutt Bhalachandra</a> (Postdoctoral Appointee at <a href="https://www.anl.gov/" target="_blank">Argonne National Laboratory</a>). Also, I am a Research Assistant in HiPeC Lab at <a href="https://iiitd.ac.in/" target="_blank">IIIT-Delhi</a>. My current aim is to design and implement energy-efficient runtime for distributed systems using Hybrid programming models.
-			<br>
-			<br>
-			My Research Interest lies in Hight Performance Computing and building Parallel programming models and efficient Runtime systems. I aim to design an adaptive runtime model that dynamically adapts power-controlled environments on many-core systems without losing significant performance.
-			<br>
-			<br>
+		</p>
+		<p class="sub_text" style="text-align: justify; white-space: normal;">
+			My Research Interest lies in High Performance Computing and building Parallel programming models and efficient Runtime systems. I aim to design an adaptive runtime model that dynamically adapts power-controlled environments on many-core systems without losing significant performance.
+		</p>
+		<p class="sub_text" style="text-align: justify; white-space: normal;">
 			Before that, I was a B.Tech student in the computer science and engineering department at IIIT-Delhi. I worked on a thesis as an undergraduate researcher in the final of my graduation. My thesis aimed to design an energy-efficient runtime library for parallel programs on multi-core processors.
 
 
