--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<ul>
 			<li><a href="pages/contact.html">Contact</a></li>
 			<li><a href="pages/cv.html">CV</a></li>
+			<li><a href="pages/publications.html">Publications</a></li>
 			<li><a href="pages/about.html">About</a></li>
 			<li><a href="index.html">Home</a></li>
 
