--- a/pages/cv.html
+++ b/pages/cv.html
@@ -10,6 +10,7 @@
 		<ul>
 			<li><a href="contact.html">Contact</a></li>
 			<li><a href="cv.html">CV</a></li>
+			<li><a href="publications.html">Publications</a></li>
 			<li><a href="about.html">About</a></li>
 			<li><a href="../index.html">Home</a></li>
 
