fixed minor bug

--- a/pages/publications.html
+++ b/pages/publications.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>About me</title>
+		<title>Publications</title>
 		<link rel="stylesheet" href="styles.css">
 	</head>
 
