--- a/pages/cv.html
+++ b/pages/cv.html
@@ -19,7 +19,7 @@
 		
 		<h1 class="heading">Resume</h1>
 		<div class="sub_text">
-			<embed src="../document/Myresume.pdf" type="application/pdf" width="800px" height="600px" >
+			<object data="../document/Myresume.pdf" type="application/pdf" width="800px" height="600px"></object>
 		</div>
 		
 
