--- a/index.html
+++ b/index.html
@@ -33,6 +33,16 @@
         <h1 class="heading" style="text-align: center;">Sunil Kumar</h1>
         <h2 class="sub_text" style="text-align: center;">PhD Candidate @ <a href="http://hipec.iiitd.edu.in/" target="_blank">HiPeC Lab</a></h2>
         <h2 class="sub_text" style="text-align: center;">Indraprastha Institute of Information Technology, Delhi (<a href="https://iiitd.ac.in/" target="_blank">IIIT-Delhi</a>)</h2>
+        <br>
+		<br>
+		<br>
+		<br>
+		<br>
+        <h1> News </h1>
+        <div style="width:600px;height:100px;line-height:3em;overflow:auto;padding:5px;border:4px double #FFFFFF;background: #333333;color: white">
+        	<p> Recently Joined PhD at IIIT-Delhi</p>
+			<p> Paper accepted in SC'21</p>
+		</div>
 		
 		
 	</body>
