--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
 		<br>
         <h1> News </h1>
         <div style="width:600px;height:100px;line-height:3em;overflow:auto;padding:5px;border:4px double #FFFFFF;background: #333333;color: white">
-        	<p> Recently Joined PhD at IIIT-Delhi</p>
+		<p> Student Volunteer application accepted in SC'21</p>
+        	<p> Recently Joined PhD Program at IIIT-Delhi</p>
 			<p> Paper accepted in SC'21</p>
 		</div>
 		
