--- a/pages/publications.html
+++ b/pages/publications.html
@@ -37,7 +37,7 @@
 		<br>
 		<br>
 		<h1 class="heading">Publications</h1>
-		<p><b>Sunil Kumar</b>, Akshat Gupta, Vivek Kumar, and Sridutt Bhalachandra, "<b>Cuttlefish: Library for Achieving Energy Efficiency in Multicore Parallel Programs</b>", in Proceedings of the International Conference for High Performance Computing, Networking, Storage and Analysis (SC'21), St. Louis, MO, USA, November 2021. [<a href="javascript: void(0);" onClick="toggle('p16')">abstract</a>] 
+		<p><b>Sunil Kumar</b>, Akshat Gupta, Vivek Kumar, and Sridutt Bhalachandra, "<b>Cuttlefish: Library for Achieving Energy Efficiency in Multicore Parallel Programs</b>", in Proceedings of the International Conference for High Performance Computing, Networking, Storage and Analysis (SC'21), St. Louis, MO, USA, November 2021. [<a href="javascript: void(0);" onClick="toggle('p16')">abstract</a>], [<a href="https://dl.acm.org/doi/10.1145/3458817.3476163" target="_blank">paper</a>] 
 		<div id="p16" style="display:none;">
 		<i><p>
 		A low-cap power budget is challenging for exascale computing. Dynamic Voltage and Frequency Scaling (DVFS) and Uncore Frequency Scaling (UFS) are the two widely used techniques for limiting the HPC application’s energy footprint. However, existing approaches fail to provide a unified solution that can work with different types of parallel programming models and applications.
