--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
 		</ul>
 			<img src="photos/bio.jpg" alt="profile photo">
+		
 		<br>
 		<br>
 		<br>
@@ -40,7 +41,9 @@
 		<br>
         <h1> News </h1>
         <div style="width:600px;height:100px;line-height:3em;overflow:auto;padding:5px;border:4px double #FFFFFF;background: #333333;color: white">
-		<p> Recieved SIGHPC Travel grant for SC21</P>
+		<p> Recieved Letter of Appreciation for B.Tech Project</p>
+		<p> Our SC '21 paper is one of the five Best Reproducibility Advancement Finalist papers</p>
+		<p> Recieved SIGHPC Travel grant for SC21</p>
 		<p> Student Volunteer application accepted in SC'21</p>
         	<p> Recently Joined PhD Program at IIIT-Delhi</p>
 			<p> Paper accepted in SC'21</p>
