--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		<br>
 		<br>
         <h1 class="heading" style="text-align: center;">Sunil Kumar</h1>
-        <h2 class="sub_text" style="text-align: center;">PhD Candidate @ <a href="http://hipec.iiitd.edu.in/" target="_blank">HiPeC Lab</a></h2>
+        <h2 class="sub_text" style="text-align: center;">PhD Scholar @ <a href="http://hipec.iiitd.edu.in/" target="_blank">HiPeC Lab</a></h2>
         <h2 class="sub_text" style="text-align: center;">Indraprastha Institute of Information Technology, Delhi (<a href="https://iiitd.ac.in/" target="_blank">IIIT-Delhi</a>)</h2>
         <br>
 		<br>
