--- a/pages/contact.html
+++ b/pages/contact.html
@@ -29,7 +29,7 @@
 		<br>
 		<br>
 		<h1 class="heading">Profile Links</h1>
-		<a href="mailto:sunil17112@iiitd.ac.in" target="_blank">sunil17112@iiitd.ac.in</a>
+		<a href="mailto:sunilk@iiitd.ac.in" target="_blank">sunilk@iiitd.ac.in</a>
 		<br>
 		<a href="https://www.linkedin.com/in/justasunil" target="_blank">Linkedin Profile</a>
 		<br>
