--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 
 	<body>
 
-		<h1>Sunil Kumar (PhD Scholar)</h1>
 
 		<ul>
 			<li><a href="pages/contact.html">Contact</a></li>
@@ -28,19 +27,14 @@
 		<br>
 		<br>
 		<br>
-		<br>
-		<br>
-		<br>
         <h1 class="heading" style="text-align: center;">Sunil Kumar</h1>
         <h2 class="sub_text" style="text-align: center;">PhD Scholar @ <a href="http://hipec.iiitd.edu.in/" target="_blank">HiPeC Lab</a></h2>
         <h2 class="sub_text" style="text-align: center;">Indraprastha Institute of Information Technology, Delhi (<a href="https://iiitd.ac.in/" target="_blank">IIIT-Delhi</a>)</h2>
         <br>
-		<br>
-		<br>
-		<br>
-		<br>
         <h1> News </h1>
-        <div style="width:600px;height:100px;line-height:3em;overflow:auto;padding:5px;border:4px double #FFFFFF;background: #333333;color: white">
+        <div style="width:600px;height:150px;line-height:2.7em;overflow-y:scroll;padding:5px;border:10px double #FFFFFF;background: #333333;color: white">
+		<p> Google PhD Fellowship 2022 recipient
+		<p> Short paper accepted in HiPC SRS 2022
 		<p> Recieved Letter of Appreciation for B.Tech Project</p>
 		<p> Our SC '21 paper is one of the five Best Reproducibility Advancement Finalist papers</p>
 		<p> Recieved SIGHPC Travel grant for SC21</p>
