--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <br>
         <h1> News </h1>
         <div style="width:600px;height:150px;line-height:2.7em;overflow-y:scroll;padding:5px;border:10px double #FFFFFF;background: #333333;color: white">
+		<p> Short paper accepted in HiPC SRS 2024
 		<p> Google PhD Fellowship 2022 recipient
 		<p> Short paper accepted in HiPC SRS 2022
 		<p> Recieved Letter of Appreciation for B.Tech Project</p>
