update on dec 2024

--- a/pages/about.html
+++ b/pages/about.html
@@ -26,15 +26,15 @@
 		<br>
 		<h1 class="heading">About me</h1>
 		<p class="sub_text" style="text-align: justify; white-space: normal;">
-			I am a Ph.D. scholar in <a href="http://hipec.iiitd.edu.in/" target="_blank">HiPeC Lab</a> at Indraprastha Institute of Information Technology, Delhi (<a href="https://iiitd.ac.in/" target="_blank">IIIT-Delhi</a>), guided by <a href="https://vivkumar.github.io/" target="_blank">Dr. Vivek Kumar</a> (Assistant Professor at <a href="https://iiitd.ac.in/" target="_blank">IIIT-Delhi</a>). I also worked as a Research Assistant in HiPec Lab where I was looking for designing and implementing an energy-efficient runtime for distributed systems using Hybrid programming models.
+			I am a Ph.D. scholar, working with <a href="https://hipec.github.io/" target="_blank">HiPeC Lab</a> at Indraprastha Institute of Information Technology, Delhi (<a href="https://iiitd.ac.in/" target="_blank">IIIT-Delhi</a>), guided by <a href="https://vivkumar.github.io/" target="_blank">Dr. Vivek Kumar</a> (Assistant Professor at <a href="https://iiitd.ac.in/" target="_blank">IIIT-Delhi</a>). I also worked at HiPeC Lab as a Research Assistant where I was looking for designing and implementing an energy-efficient runtime for distributed systems using Hybrid programming models.
 		</p>
 		<p class="sub_text" style="text-align: justify; white-space: normal;">
-			Before that, I was a B.Tech student in the computer science and engineering department at IIIT-Delhi. I worked on a thesis as an undergraduate researcher in the final year of my graduation. My thesis aimed to design an energy-efficient runtime library for parallel programs on multi-core processors.
+			Before that, I was a B.Tech student in the computer science and engineering department at IIIT-Delhi. I worked on a research project in HiPeC Lab as an undergraduate researcher. My role in project was to design an energy-efficient runtime library for parallel programs on multi-core processors.
 
 
 		</p>
 		<p class="sub_text" style="text-align: justify; white-space: normal;">
-			My Research Interest lies in High Performance Computing and building Parallel programming models and efficient Runtime systems. Particularly, I am interested to design an adaptive runtime model that dynamically adapts power-controlled environments on HPC systems without losing significant performance.
+			My Research Interest lies in High Performance Computing and building runtime softwares for HPC systems composed with multicore processors. Particularly, I am interested to design an adaptive runtime software that dynamically adapts power-efficient environments on HPC systems without hurting performance.
 		</p>
 		
 
