--- a/pages/publications.html
+++ b/pages/publications.html
@@ -38,7 +38,7 @@
 		<h1 class="heading">Publications</h1>
 		<p><b>Sunil Kumar</b>, Vivek Kumar, and Sridutt Bhalachandra, "<b>RPM: Reward Power Manager for Power Distribution over a Cluster</b>", in Student Research Symposium, HiPC'24. [<a href="../papers/hipc24-srs.pdf" target="_blank">paper</a>]
                 </p>
-		<p><b>Sunil Kumar</b>, Vivek Kumar, and Sridutt Bhalachandra, "<b>Energy-Efficient Execution of Multicore Parallel Programs under Limited Power Budget</b>", in Student Research Symposium, HiPC'22. [<a href="../papers/hipc22-srs.pdf" target="_blank">paper</a>] 
+		<p><b>Sunil Kumar</b>, Vivek Kumar, and Sridutt Bhalachandra, "<b>Energy Efficiency under Limited Power Budget</b>", in Student Research Symposium, HiPC'22. [<a href="../papers/hipc22-srs.pdf" target="_blank">paper</a>], [<a href="https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=10056546" target="_blank">@IEEE</a>] 
 		</p>
 		<p><b>Sunil Kumar</b>, Akshat Gupta, Vivek Kumar, and Sridutt Bhalachandra, "<b>Cuttlefish: Library for Achieving Energy Efficiency in Multicore Parallel Programs</b>", in Proceedings of the International Conference for High Performance Computing, Networking, Storage and Analysis (SC'21), St. Louis, MO, USA, November 2021. [<a href="javascript: void(0);" onClick="toggle('p16')">abstract</a>], [<a href="https://dl.acm.org/doi/10.1145/3458817.3476163" target="_blank">paper</a>] 
 		<div id="p16" style="display:none;">
