--- a/pages/publications.html
+++ b/pages/publications.html
@@ -1,4 +1,17 @@
 <!DOCTYPE html>
+
+
+<script>
+function toggle(id) {
+    var el = document.getElementById(id);
+    if (el.style.display === "none") {
+        el.style.display = "block";
+    } else {
+        el.style.display = "none";
+    }
+}
+</script>
+
 <html>
 	<head>
 		<title>Publications</title>
@@ -36,18 +49,50 @@
 		<br>
 		<br>
 		<h1 class="heading">Publications</h1>
-		<p><b>Sunil Kumar</b>, Vivek Kumar, and Sridutt Bhalachandra, "<b>RPM: Reward Power Manager for Power Distribution over a Cluster</b>", in Student Research Symposium, HiPC'24. [<a href="../papers/hipc24-srs.pdf" target="_blank">paper</a>]
-                </p>
-		<p><b>Sunil Kumar</b>, Vivek Kumar, and Sridutt Bhalachandra, "<b>Energy Efficiency under Limited Power Budget</b>", in Student Research Symposium, HiPC'22. [<a href="../papers/hipc22-srs.pdf" target="_blank">paper</a>], [<a href="https://doi.org/10.1109/HiPCW57629.2022.00015" target="_blank">doi</a>] 
-		</p>
-		<p><b>Sunil Kumar</b>, Akshat Gupta, Vivek Kumar, and Sridutt Bhalachandra, "<b>Cuttlefish: Library for Achieving Energy Efficiency in Multicore Parallel Programs</b>", in Proceedings of the International Conference for High Performance Computing, Networking, Storage and Analysis (SC'21), St. Louis, MO, USA, November 2021. [<a href="javascript: void(0);" onClick="toggle('p16')">abstract</a>], [<a href="https://dl.acm.org/doi/10.1145/3458817.3476163" target="_blank">paper</a>] 
-		<div id="p16" style="display:none;">
-		<i><p>
-		A low-cap power budget is challenging for exascale computing. Dynamic Voltage and Frequency Scaling (DVFS) and Uncore Frequency Scaling (UFS) are the two widely used techniques for limiting the HPC application’s energy footprint. However, existing approaches fail to provide a unified solution that can work with different types of parallel programming models and applications.
-		</p>
-		<p>
-		This paper proposes Cuttlefish, a programming model oblivious C/C++ library for achieving energy efficiency in multicore parallel programs running over Intel processors. An online profiler periodically profiles model-specific registers to discover a running application’s memory access pattern. Using a combination of DVFS and UFS, Cuttlefish then dynamically adapts the processor’s core and uncore frequencies, thereby improving its energy efficiency. The evaluation on a 20-core Intel Xeon processor using a set of widely used OpenMP benchmarks, consisting of several irregular-tasking and work-sharing pragmas, achieves geometric mean energy savings of 19.4% with a 3.6% slowdown.
-		</p></i>
+
+<p><b>Sunil Kumar</b>, and Vivek Kumar, "<b>KarmaPM: Reward-Driven Power Manager</b>", in Proceedings of the European Conference on Parallel Processing (EuroPAR'25), Dresden, Germany, August 2025.
+  [<a href="javascript:void(0);" onclick="toggle('abstract-karma')">abstract</a>]
+</p>
+<div id="abstract-karma" style="display:none;">
+  <i>
+    <p>
+      Hardware overprovisioning is a widely used technique to improve the average power utilization of computing systems by capping the processor’s power consumption. However, applying a uniform powercap across multiprocessor system sockets can significantly impact co-running applications due to workload variations. This paper introduces KarmaPM, a novel power management library for co-running applications on multiprocessor systems, independent of the parallel programming model, based on application power donation phases. KarmaPM dynamically redistributes power bidirectionally across the sockets to improve overall system throughput for co-running applications while maintaining fairness between them.
+    </p>
+    <p>
+      KarmaPM periodically profiles the CPU utilization of each socket. When it detects a socket underutilizing its CPU resources, it donates the surplus power from this donor socket to the other sockets (receivers) exhibiting high CPU utilization. When donor sockets enter a high CPU utilization phase, KarmaPM employs a reward power scheme that rewards the donor sockets by returning a portion of the transferred power.
+    </p>
+    <p>
+      We evaluated KarmaPM across various exascale proxy application mixes and power caps on a four-socket, 72-core Intel Cooper Lake processor. Our results show that KarmaPM improved the system throughput (geometric mean) by 13.2% at a lower power cap and 6.6% at a higher power cap. Additionally, KarmaPM delivered improvements of 12.5% and 4.4% in system throughput (geomean) compared to an existing power manager at these respective power caps.
+    </p>
+  </i>
+</div>
+
+<p><b>Sunil Kumar</b>, Vivek Kumar, and Sridutt Bhalachandra, "<b>RPM: Reward Power Manager for Power Distribution over a Cluster</b>", in Student Research Symposium, HiPC'24.
+  [<a href="../papers/hipc24-srs.pdf" target="_blank">paper</a>]
+</p>
+
+<p><b>Sunil Kumar</b>, Vivek Kumar, and Sridutt Bhalachandra, "<b>Energy Efficiency under Limited Power Budget</b>", in Student Research Symposium, HiPC'22.
+  [<a href="../papers/hipc22-srs.pdf" target="_blank">paper</a>], 
+  [<a href="https://doi.org/10.1109/HiPCW57629.2022.00015" target="_blank">doi</a>]
+</p>
+
+<p><b>Sunil Kumar</b>, Akshat Gupta, Vivek Kumar, and Sridutt Bhalachandra, "<b>Cuttlefish: Library for Achieving Energy Efficiency in Multicore Parallel Programs</b>", in Proceedings of the International Conference for High Performance Computing, Networking, Storage and Analysis (SC'21), St. Louis, MO, USA, November 2021.
+  [<a href="javascript:void(0);" onclick="toggle('abstract-cuttlefish')">abstract</a>], 
+  [<a href="https://dl.acm.org/doi/10.1145/3458817.3476163" target="_blank">paper</a>]
+</p>
+<div id="abstract-cuttlefish" style="display:none;">
+  <i>
+    <p>
+      A low-cap power budget is challenging for exascale computing. Dynamic Voltage and Frequency Scaling (DVFS) and Uncore Frequency Scaling (UFS) are the two widely used techniques for limiting the HPC application’s energy footprint. However, existing approaches fail to provide a unified solution that can work with different types of parallel programming models and applications.
+    </p>
+    <p>
+      This paper proposes Cuttlefish, a programming model oblivious C/C++ library for achieving energy efficiency in multicore parallel programs running over Intel processors. An online profiler periodically profiles model-specific registers to discover a running application’s memory access pattern. Using a combination of DVFS and UFS, Cuttlefish then dynamically adapts the processor’s core and uncore frequencies, thereby improving its energy efficiency.
+    </p>
+    <p>
+      The evaluation on a 20-core Intel Xeon processor using a set of widely used OpenMP benchmarks, consisting of several irregular-tasking and work-sharing pragmas, achieves geometric mean energy savings of 19.4% with a 3.6% slowdown.
+    </p>
+  </i>
+</div>
 
 
 	</body>
