--- a/pages/about.html
+++ b/pages/about.html
@@ -26,18 +26,14 @@
 		<br>
 		<h1 class="heading">About me</h1>
 		<p class="sub_text" style="text-align: justify; white-space: normal;">
-			I am a Ph.D. scholar, working with <a href="https://hipec.github.io/" target="_blank">HiPeC Lab</a> at Indraprastha Institute of Information Technology, Delhi (<a href="https://iiitd.ac.in/" target="_blank">IIIT-Delhi</a>), guided by <a href="https://vivkumar.github.io/" target="_blank">Dr. Vivek Kumar</a> (Assistant Professor at <a href="https://iiitd.ac.in/" target="_blank">IIIT-Delhi</a>). I also worked at HiPeC Lab as a Research Assistant where I was looking for designing and implementing an energy-efficient runtime for distributed systems using Hybrid programming models.
+
+		I am a Ph.D. scholar at <a href="https://hipec.github.io/" target="_blank">HiPeC Lab</a>, Indraprastha Institute of Information Technology Delhi (<a href="https://iiitd.ac.in/" target="_blank">IIIT Delhi</a>), under the guidance of <a href="https://vivkumar.github.io/" target="_blank">Dr. Vivek Kumar</a>. Prior to this, I worked at the HiPeC Lab as a Research Assistant, where I focused on designing and implementing energy-efficient runtimes for distributed systems using hybrid programming models.
 		</p>
 		<p class="sub_text" style="text-align: justify; white-space: normal;">
-			Before that, I was a B.Tech student in the computer science and engineering department at IIIT-Delhi. I worked on a research project in HiPeC Lab as an undergraduate researcher. My role in project was to design an energy-efficient runtime library for parallel programs on multi-core processors.
-
-
+		Before starting my Ph.D., I completed my B.Tech in Computer Science and Engineering at IIIT Delhi. As an undergraduate researcher at the HiPeC Lab, I worked on a project aimed at designing an energy-efficient runtime library for parallel programs running on multi-core processors.
 		</p>
-		<p class="sub_text" style="text-align: justify; white-space: normal;">
-			My Research Interest lies in High Performance Computing and building runtime softwares for HPC systems composed with multicore processors. Particularly, I am interested to design an adaptive runtime software that dynamically adapts power-efficient environments on HPC systems without hurting performance.
+                <p class="sub_text" style="text-align: justify; white-space: normal;">
+		My research interests lie in High Performance Computing (HPC), with a focus on building runtime software for HPC systems composed of multicore processors. Specifically, I am interested in developing adaptive runtime systems that can dynamically adjust to power-efficient environments on HPC systems without compromising performance.
 		</p>
-		
-
-
 	</body>
 </html>
