--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
         <br>
         <h1> News </h1>
         <div style="width:600px;height:150px;line-height:2.7em;overflow-y:scroll;padding:5px;border:10px double #FFFFFF;background: #333333;color: white">
-		<p> Paper accepted in EuroPAR'25
+		<p> Paper accepted in PhD Symposium track at Euro-Par'25
+		<p> Artifact accepted in Euro-Par'25
+		<p> Paper accepted in Euro-Par'25
 		<p> Short paper accepted in HiPC SRS 2024
 		<p> Short paper accepted in HiPC SRS 2022
 		<p> Recieved Letter of Appreciation for B.Tech Project</p>
