--- a/pages/publications.html
+++ b/pages/publications.html
@@ -65,7 +65,8 @@ function toggle(id) {
 
 
 <p><b>Sunil Kumar</b>, and Vivek Kumar, "<b>KarmaPM: Reward-Driven Power Manager</b>", in Proceedings of the European Conference on Parallel Processing (Euro-Par'25), Dresden, Germany, August 2025.
-  [<a href="javascript:void(0);" onclick="toggle('abstract-karma')">abstract</a>]
+  [<a href="javascript:void(0);" onclick="toggle('abstract-karma')">abstract</a>],
+  [<a href="https://doi.org/10.1007/978-3-031-99854-6_24" target="_blank">paper</a>]
 </p>
 <div id="abstract-karma" style="display:none;">
   <i>
